--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
         <div class="row justify-content-center align-self-center w-100">
             <div class="col-12 card card-main">
                 <div class="row h-100">
-                    <div class="col-3 side-panel-background m-4">
-dsada
+                    <div class="col-sm-3 side-panel-background m-4">
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="circle">1</div>
+                            </div>
+                            <div class="col-10">
+
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-9">
+                    <div class="col-sm-9">
 
                     </div>                
                 </div>
