Select Plan Section Successfully Fixed!

--- a/select-plan.html
+++ b/select-plan.html
@@ -79,6 +79,7 @@
                                         <img src="/assets/images/icon-arcade.svg" alt="">
                                         <h5>Arcade</h5>
                                         <p>$9/mo</p>
+                                        <small class="small primary-blue-text-color">2 months free</small>
                                     </div>
                                 </div>
     
@@ -87,6 +88,7 @@
                                         <img src="/assets/images/icon-advanced.svg" alt="">
                                         <h5>Advanced</h5>
                                         <p>$12/mo</p>
+                                        <small class="small primary-blue-text-color">2 months free</small>
                                     </div>
                                 </div>
 
@@ -95,6 +97,7 @@
                                         <img src="/assets/images/icon-pro.svg" alt="">
                                         <h5>Pro</h5>
                                         <p>$15/mo</p>
+                                        <small class="small primary-blue-text-color">2 months free</small>
                                     </div>
                                 </div>
                             </div>
@@ -106,12 +109,12 @@
                                 <input type="checkbox">
                                 <span class="slider round"></span>
                             </label>
-                            <label>Yearly</label>
+                            <label class="text-muted">Yearly</label>
                         </div>
 
                         <div class="w-100 form-options-footer">
-                            <button class="btn btn-custom btn-lg float-left">Go Back</button>
-                            <button class="btn btn-primary-custom btn-lg float-right">Next Step</button>
+                            <a href="index.html" class="btn btn-custom btn-lg float-left">Go Back</a>
+                            <a href="add-ons.html" class="btn btn-primary-custom btn-lg float-right">Next Step</a>
                         </div>
                     </div>                
                 </div>
