--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </div>
 
                         <div class="w-100 form-options-footer">
-                            <button class="btn btn-primary-custom btn-lg float-right">Next Step</button>
+                            <a href="select-plan.html" class="btn btn-primary-custom btn-lg float-right">Next Step</a>
                         </div>
                     </div>                
                 </div>
